--- a/src/source/message_ru.properties
+++ b/src/source/message_ru.properties
@@ -2,3 +2,10 @@ sizeForm.id=\u0412\u0432\u0435\u0434\u0438\u0442\u0435 id \u0440\u0430\u0437\u04
 profit.produced=\u041F\u0440\u043E\u0438\u0437\u0432\u0435\u0434\u0435\u043D\u043E
 profit.ordered=\u0417\u0430\u043A\u0430\u0437\u0430\u043D\u043E
 profit.date=\u0414\u0430\u0442\u0430
+button.orders=\u0417\u0430\u043A\u0430\u0437\u044B
+button.clients=\u041A\u043B\u0438\u0435\u043D\u0442\u044B
+button.equipments=\u041E\u0431\u043E\u0440\u0443\u0434\u043E\u0432\u0430\u043D\u0438\u0435
+button.factories=\u0424\u0430\u0431\u0440\u0438\u043A\u0438
+button.personnel=\u041F\u0435\u0440\u0441\u043E\u043D\u0430\u043B
+button.products=\u041F\u0440\u043E\u0434\u0443\u043A\u0442\u044B
+button.profit=\u041F\u0440\u0438\u0431\u044B\u043B\u044C
