--- a/src/source/message_ru.properties
+++ b/src/source/message_ru.properties
@@ -9,3 +9,17 @@ button.factories=\u0424\u0430\u0431\u0440\u0438\u043A\u0438
 button.personnel=\u041F\u0435\u0440\u0441\u043E\u043D\u0430\u043B
 button.products=\u041F\u0440\u043E\u0434\u0443\u043A\u0442\u044B
 button.profit=\u041F\u0440\u0438\u0431\u044B\u043B\u044C
+button.add=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C
+label.firstname=\u0418\u043C\u044F
+label.lastname=\u0424\u0430\u043C\u0438\u043B\u0438\u044F
+label.middlename=\u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
+label.telephone=\u0422\u0435\u043B\u0435\u0444\u043E\u043D
+label.name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435
+label.factory=\u0424\u0430\u0431\u0440\u0438\u043A\u0430
+label.city=\u0413\u043E\u0440\u043E\u0434
+label.client=\u041A\u043B\u0438\u0435\u043D\u0442
+label.date=\u0414\u0430\u0442\u0430
+label.address=\u0410\u0434\u0440\u0435\u0441
+label.cost=\u0421\u0442\u043E\u0438\u043C\u043E\u0441\u0442\u044C
+label.size=\u0420\u0430\u0437\u043C\u0435\u0440
+label.choose.factory=\u0412\u044B\u0431\u0435\u0440\u0438\u0442\u0435 \u0444\u0430\u0431\u0440\u0438\u043A\u0443
